--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,40 @@
-cloudpickle==3.0.0
+Box2D==2.3.2
+Box2D-kengz==2.3.3
+cloudpickle==2.2.1
 cmake==3.28.3
+contourpy==1.0.7
+cycler==0.12.1
 Farama-Notifications==0.0.4
 filelock==3.13.1
+fonttools==4.50.0
 fsspec==2024.2.0
+gym==0.26.2
 gym-notices==0.0.8
 gymnasium==0.29.1
 importlib-resources==6.1.1
 install==1.3.5
 Jinja2==3.1.3
+joblib==1.2.0
+kiwisolver==1.4.5
 MarkupSafe==2.1.5
+matplotlib==3.7.1
 mpmath==1.3.0
-networkx==3.2.1
-numpy==1.26.4
+networkx==3.1
+numpy==1.24.3
+packaging==23.1
 pandas==2.2.0
+Pillow==9.5.0
 pygame==2.5.2
+pyparsing==3.1.2
 pyqlearning==1.2.7
-python-dateutil==2.8.2
+python-dateutil==2.9.0.post0
 pytz==2024.1
-scipy==1.12.0
+scikit-learn==1.2.2
+scipy==1.10.1
 six==1.16.0
 sympy==1.12
+threadpoolctl==3.1.0
 torch==2.2.0
 tqdm==4.66.2
 typing_extensions==4.9.0
 tzdata==2024.1
-box2d-py
