--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Box2D==2.3.2
 Box2D-kengz==2.3.3
+box2d-py==2.3.8
 cloudpickle==2.2.1
 cmake==3.28.3
 contourpy==1.0.7
@@ -24,6 +25,7 @@ numpy==1.24.3
 packaging==23.1
 pandas==2.2.0
 Pillow==9.5.0
+pyarrow==15.0.2
 pygame==2.5.2
 pyparsing==3.1.2
 pyqlearning==1.2.7
