--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ gym==0.26.2
 gym-notices==0.0.8
 gymnasium==0.29.1
 h5py==3.11.0
+httplib2==0.22.0
 idna==3.6
 imageio==2.34.0
 imageio-ffmpeg==0.4.9
@@ -47,9 +48,13 @@ opt-einsum==3.3.0
 optree==0.11.0
 packaging==23.1
 pandas==2.2.0
+pexpect==4.9.0
 Pillow==9.5.0
+prettytable==3.10.0
 proglog==0.1.10
+progressbar==2.5
 protobuf==4.25.3
+ptyprocess==0.7.0
 pyarrow==15.0.2
 pygame==2.5.2
 Pygments==2.17.2
@@ -57,7 +62,9 @@ pyparsing==3.1.2
 pyqlearning==1.2.7
 python-dateutil==2.9.0.post0
 pytz==2024.1
+PyYAML==6.0.1
 requests==2.31.0
+rfc3987==1.3.8
 rich==13.7.1
 scikit-learn==1.2.2
 scipy==1.10.1
@@ -70,10 +77,13 @@ tensorflow==2.16.1
 tensorflow-io-gcs-filesystem==0.36.0
 termcolor==2.4.0
 threadpoolctl==3.1.0
+tk==0.1.0
 torch==2.2.0
 tqdm==4.66.2
+typeguard==2.13.3
 typing_extensions==4.9.0
 tzdata==2024.1
 urllib3==2.2.1
+wcwidth==0.2.13
 Werkzeug==3.0.2
 wrapt==1.16.0
